# trim

./: README.md  install.sh  pyproject.toml
agents/claude/: trim-explore.md
prompts/: claude-context-budget.md  codex-agents.md
templates/claude/: hooks.json  settings.json
templates/codex/: config.toml
trimlib/: __init__.py  app.py  cli.py  commands.py  events.py  install.py  ledger.py  paths.py  summarize.py
trimlib/assets/agents/claude/: trim-explore.md
trimlib/assets/agents/codex/: trim-explore.toml  trim-explorer.toml
trimlib/assets/prompts/claude/: compact.md  exploration.md
trimlib/assets/prompts/codex/: compact.md  exploration.md
trimlib/assets/templates/codex/: config.toml
